test/compile-errors/destructure-non-tuple.crow
main void()
	(x, y) = 1
	x,
